[gd_scene load_steps=5 format=3 uid="uid://6t0anypq87r6"]

[ext_resource type="SpriteFrames" uid="uid://cjh2ais88m1ld" path="res://scenes/GreenBlueSpriteFrames.tres" id="1_dp4js"]
[ext_resource type="Script" path="res://Frog_2.gd" id="1_jowgc"]
[ext_resource type="PackedScene" uid="uid://cb7fbrlenwajh" path="res://scenes/collision_component.tscn" id="2_gy4mu"]
[ext_resource type="PackedScene" uid="uid://bl0tdhfflep4x" path="res://scenes/egg_spawn_component.tscn" id="3_xdab8"]

[node name="Frog_2" type="AnimatedSprite2D"]
position = Vector2(1031, 504)
scale = Vector2(7.3125, 7.58333)
sprite_frames = ExtResource("1_dp4js")
animation = &"Idle"
autoplay = "Idle"
script = ExtResource("1_jowgc")

[node name="Collision" parent="." instance=ExtResource("2_gy4mu")]
unique_name_in_owner = true

[node name="ClickTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="ScienceSpawn" parent="." instance=ExtResource("3_xdab8")]
unique_name_in_owner = true

[connection signal="frame_changed" from="." to="." method="_on_frame_changed"]
